# central_nav_sim_ws

./: .dockerignore  .gitmodules  Dockerfile
benchmark_scripts/: .gitignore  benchmark.sh  benchmark2.sh  benchmark3_pre.sh  docker_launch.sh  initial_analysis.ipynb  initial_analysis_v2.ipynb  preprocess.py  preprocess_test.ipynb  run.py  run_benchmark.py  run_multiple.py  test_poses.yml  world_points.csv
benchmark_scripts/20250205_165100-2/bag/: bag_0.db3  metadata.yaml
benchmark_scripts/20250205_165138-2/bag/: bag_0.db3  metadata.yaml
src/benchmark_tools/: package.xml  setup.cfg  setup.py
src/benchmark_tools/benchmark_tools/: bumper_node.py  timer.py  wait_until_nav_complete.py  wait_until_nav_start.py
src/benchmark_tools/launch/: bumper_launch.xml  nav_wait_launch.xml  nav_wait_start_launch.xml  timer_launch.xml
src/tb3_nav_launch/: package.xml  setup.cfg  setup.py
src/tb3_nav_launch/config/: blind.patch  burger_blind.yaml  waffle.yaml  waffle_blind.yaml  waffle_pi_blind.yaml
src/tb3_nav_launch/launch/: map_navigation_launch.py  nav_launch.xml  rviz_launch.xml  slam_launch.xml
src/tb3_nav_launch/map/: dqn1.pgm  dqn1.yaml  dqn2.pgm  dqn2.yaml  dqn3.pgm  dqn3.yaml  dqn4.pgm  dqn4.yaml  house.pgm  house.yaml  world.pgm  world.yaml  world_2.0_0.0.yaml
src/tb3_nav_launch/rviz/: navigation.rviz  slam.rviz
